--- a/index.html
+++ b/index.html
@@ -24,5 +24,37 @@
         <img src="./assets/images/Me.jpg">
     </div>
   </div>
+  <br><br><br><br><br>
+  <hr>
+  <div class="contact-info">
+    <div class="contacts">
+    <div class="address">
+        <p><b>Address:</b> KG 705 ST Kigali Rwanda</p>
+    </div>
+    <div class="phone">
+        <p><b>Phone:</b>0780356337</p> 
+    </div>
+    <div class="email">
+        <p><b>E-mail:</b>inemabb@gmail.com</p>
+    </div>
+    </div>
+    <div class="container">
+        <div class="message">
+            <h1>Contact Us</h1>
+            <label>FULL NAME</label>
+            <input type="text">
+            <label>EMAIL ADDRESS</label>
+            <input type="email">
+            <label>SUBJECT</label>
+            <input type="text">
+            <h4>Type Your Message Here...</h4>
+            <textarea required></textarea><br>
+            <input type="submit" value="Send" id="button">
+        </div>
+        <div class="image">
+            <img src="./assets/images/me22.jpg">
+        </div>
+      </div>
+  </div>
 </body>
 </html>
