Added skills page

--- a/index.html
+++ b/index.html
@@ -56,5 +56,17 @@
         </div>
       </div>
   </div>
+  <h1>My Skills</h1>
+  <div class="my-skills"> 
+      <div class="html">
+        <img src="./assets/images/html.jpg">
+      </div>
+      <div class="css">
+        <img src="./assets/images/css.jpg">
+      </div>
+      <div class="js">
+        <img src="./assets/images/js.jpg">
+      </div>
+  </div>
 </body>
 </html>
